2001-02-02  OKUJI Yoshinori  <okuji@gnu.org>

	Make savedefault workable even with Stage 1.5. Reported by
	Thierry Laronde <thierry@cri74.org>.
	
	* grub/asmstub.c (chain_stage2): Added an additional argument,
	SECOND_SECTOR.
	* stage2/asm.S [STAGE1_5] (chain_stage2): Set %ebp to
	SECOND_SECTOR.
	* stage2/disk_io.c [STAGE1_5] (disk_read_hook): Defined.
	[STAGE1_5] (disk_read_func): Likewise.
	(rawread) [STAGE1_5]: Handle DISK_READ_FUNC.
	(grub_read) [STAGE1_5]: Likewise.
	* stage2/fsys_ext2fs.c (ext2fs_read) [STAGE1_5]: Likewise.
	* stage2/fsys_fat.c (fat_read) [STAGE1_5]: Likewise.
	* stage2/fsys_ffs.c (ffs_read) [STAGE1_5]: Likewise.
	* stage2/fsys_minix.c (minix_read) [STAGE1_5]: Likewise.
	* stage2/fsys_reiserfs.c (reiserfs_read) [STAGE1_5]: Likewise.
	
2001-02-02  OKUJI Yoshinori  <okuji@gnu.org>

	* netboot/config.c [GRUB && INCLUDE_PCI] (pci_dispatch_table):
	New structure.
	[GRUB && INCLUDE_PCI] (PCI_NIC): New variable.
	(eth_probe) [GRUB && INCLUDE_PCI]: If a PCI NIC candidate is
	present, probe it first.
	
2001-01-27  OKUJI Yoshinori  <okuji@gnu.org>

	From Danilo Godec <danci@agenda.si>:
	* stage2/pc_slice.h (PC_SLICE_TYPE_LINUX_RAID): New macro.
	* stage2/fsys_ext2fs.c (ext2fs_mount): Add a check for
	PC_SLICE_LINUX_RAID.
	
2001-01-27  OKUJI Yoshinori  <okuji@gnu.org>

	From Bernhard Treutwein
	<Bernhard.Treutwein@Verwaltung.Uni-Muenchen.DE>:
	* docs/grub-new.texi (DOS/Windows): Made more readable.
	
2001-01-27  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/multiboot.texi: Start reorganizing Multiboot
	Specification.
	
2001-01-15  OKUJI Yoshinori  <okuji@gnu.org>

	From Thierry Laronde <thierry.laronde@polynum.com>:
	* docs/user-ref.texi (Command-line and menu commands): Update
	the description about setkey.
	* stage2/builtins.c (setkey_func): When checking if TO_KEY and
	FROM_KEY are specified, see *TO_KEY and *FROM_KEY instead of
	TO_KEY and FROM_KEY, respectively.
	
2001-01-13  OKUJI Yoshinori  <okuji@gnu.org>
